# samplepath-flow

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  Task.md  coding_style_guide.md  pandocs.sh  pyproject.toml  releases.md  samplepath_kanban.sh
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh  preview-docs.sh
.github/workflows/: ci.yml  documentation-site.yml
.local/: list-runs.sh
decisions/: 002-core-chart-renderer.md  003-plot-call-chain-simplification.md  003-review.md  004-figure-layout-context.md  005-panel-classes-plot-api-rewiring.md  006-plotting-architecture-and-conventions.md  007-duration-scales.md  008-calendar-indexed-charts.md  plotly-backend-spike.md
decisions/diagrams/: 003.1-plot-call-chain-proposed.md  006-plotting-architecture-diagram.md
docs/: CNAME  chart_reference.md  index.html  metrics_definitions.md  not_statistics.md
docs/articles/: chart_reference.md  cli.md  not_statistics.md
docs/articles/a-methodological-contrast/: index.md
docs/articles/chart-reference/: index.md
docs/articles/chart-reference/chart_reference_small/latest/: parameters.txt
docs/articles/chart-reference/chart_reference_small/latest/exports/: event_indexed_metrics.csv
docs/articles/chart-reference/chart_reference_small/latest/input/: chart_reference_small.csv
docs/articles/chart-reference/chart_reference_small/no-events/exports/: elements.csv
docs/articles/chart-reference/chart_reference_small/with-events/advanced/: limits.txt
docs/articles/cli/: index.md
docs/articles/flow-metrics-tools-analysis/: flow-metrics-tools-analysis.md
docs/articles/not-statistics/: index.md
docs/articles/package-overview/: index.md  scope.md
docs/articles/theory/: index.md
docs/diagrams/: plot-call-chain.md
docs/drafts/: author-voice-profile.md
docs/drafts/lt-as-moving-average/: index.md
docs/drafts/reorg/: calendar_indexed_cfd.py  calendar_indexed_chart.py  documentation-architecture-analysis.md  documentation-reorg-governance.md  edit-checklist.md  edit-plan.md  element-boundary.md  start-here.md
docs/drafts/sample-path-geometry/: index.md
docs/drafts/sample-path-questions/: index.md
docs/drafts/substack/: measuring-flow.md
docs/html/: chart_reference.html  cli.html  not_statistics.html
docs/site/: index.html
docs/site/articles/a-methodological-contrast/: index.html
docs/site/articles/chart-reference/: index.html
docs/site/articles/cli/: index.html
docs/site/articles/flow-metrics-tools-analysis/: flow-metrics-tools-analysis.html
docs/site/articles/not-statistics/: index.html
docs/site/articles/package-overview/: index.html  scope.html
docs/site/articles/theory/: index.html
docs/site/drafts/: author-voice-profile.html  documentation-architecture-analysis.html  documentation-reorg-checklist.html  documentation-reorg-governance.html
docs/site/drafts/lt-as-moving-average/: index.html
docs/site/drafts/metrics-definitions/: index.html
docs/site/drafts/reorg/: README.html  documentation-architecture-analysis.html  documentation-reorg-governance.html  edit-checklist.html  edit-plan.html  element-boundary.html  start-here.html
docs/site/drafts/sample-path-geometry/: index.html
docs/site/drafts/sample-path-questions/: index.html
docs/site/drafts/substack/: measuring-flow.html
docs/site/examples/: README.html  multi_element_timestamps_README.html
docs/site/examples/polaris/: README.html
docs/src/: chart_reference.md  cli.md  pandoc_template.html
examples/: README.md  multi_element_timestamps.csv  multi_element_timestamps_README.md
examples/chart-reference/: chart_reference_small.csv  chart_reference_small_with_renewal.csv
examples/polaris/: README.md
examples/polaris/flow-of-work/aging-epics/advanced/: limits.txt
examples/polaris/flow-of-work/aging-stories-defects/advanced/: limits.txt
examples/polaris/flow-of-work/complete-epics/advanced/: limits.txt
examples/polaris/flow-of-work/complete-stories/advanced/: limits.txt
examples/polaris/flow-of-work/defects/advanced/: limits.txt
examples/polaris/work_tracking/complete-stories-tukey/advanced/: limits.txt
samplepath/: README.md  __init__.py  cli.py  csv_loader.py  data_export.py  file_utils.py  limits.py  metrics.py  point_process.py  sample_path_analysis.py
samplepath/plots/: __init__.py  advanced.py  analytic_curves.py  chart_config.py  convergence.py  core.py  figure_context.py  helpers.py  misc.py  stability.py
samplepath/utils/: duration_scale.py  file_utils.py
spath/: cli.py  csv_loader.py  file_utils.py  filter.py  limits.py  metrics.py  plots.py  point_process.py  sample_path_analysis.py
spath/plots/: convergence.py  core.py  plots.py
specs/: 00010-metric-derivations.md  00011-panel-classes.md  00012-plot-api-rewiring.md  00013-svg-output.md  00014-analytical-curve-plots.md
test/: test_cli.py  test_convergence_plots.py  test_core_plots.py  test_csv_loader.py  test_data_export.py  test_duration_scale.py  test_figure_context.py  test_file_utils.py  test_filter.py  test_plots.py  test_sample_path_analysis.py  test_stability_plots.py
test/metrics/: test_align_to_boundary.py  test_elementwise_empirical_metrics.py  test_end_effects.py  test_finite_window_flow_metrics.py  test_metric_derivations.py  test_resolve_freq.py  test_sample_path_metrics.py  test_tracking_and_coherence.py
test/plots/: test_analytic_curves.py
