[project]
name = "samplepath"
version = "0.1.1"
description = "Sample Path Analysis Library"
authors = [
    { name = "Krishna Kumar", email = "kkumar@exathink.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["presence", "flow", "queueing", "analytics"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries"
]
dependencies = [
    "numpy>=1.26,<3.0",
    "pandas>=2.2,<3.0",
    "matplotlib>=3.8,<4.0",
    "sortedcontainers>=2.4.0,<3.0.0",
]

[project.optional-dependencies]
polars = ["polars"]
dev = [
    # Testing
    "pytest",
    "pytest-cov",

    # Code quality
    "black",
    "isort",
    "mypy",
    "pre-commit",

    # Documentation
    "pdoc>=15.0.3,<16.0.0",

    # Jupyter/Notebooks
    "notebook",
    "ipykernel",

    # Markdown tools
    "mdformat",
    "mdformat-gfm",
    "mdformat-black",
]

[project.urls]
Homepage = "https://docs.pcalc.org"
Repository = "https://github.com/presence-calculus/samplepath"

[project.scripts]
samplepath = "samplepath.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# -------------------------
# Testing & Coverage
# -------------------------
[tool.pytest.ini_options]
testpaths = ["test"]
addopts = [
    "--cov=samplepath",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "-q"
]
markers = ["slow: long-running or property tests"]
# Root layout: allow `pytest` (outside Poetry) to import local package
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = ["samplepath"]
omit = ["**/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 2
# fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
